testsuite/tests/qualified-strings/should_fail/qstrings_multiline_no_ext.hs
{-# LANGUAGE QualifiedStrings #-}

main :: IO ()
main = print Prelude."""This is illegal without -XMultilineStrings"""
